# Lexicoding-Governance

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: api-specification.md  architecture.md  cryptography.md  regulatory-compliance.md
src/audit/: __init__.py  hash_chain.py
src/core/: __init__.py  crypto.py  protocol.py
src/engine/: __init__.py  pi_varx.py  sat_solver.py
src/nodes/: __init__.py  auditor_node.py  base_node.py  model_node.py  varx_node.py
src/utils/: __init__.py  nonce.py
tests/: __init__.py  conftest.py  test_crypto.py  test_hash_chain.py
